Added app icons to mockup

--- a/force-app/main/default/lwc/appLauncherSideBar/appLauncherSideBar.html
+++ b/force-app/main/default/lwc/appLauncherSideBar/appLauncherSideBar.html
@@ -7,7 +7,7 @@
         <li>
             <div>
                 <div>
-                    <a href="#"><img src="" alt=""/></a>
+                    <a href="#"><img src="https://i.imgur.com/V2fXTQ5.png" alt="Order beer with COIN"/></a>
                 </div>
                 <h3><a href="#">COIN</a></h3>
                 <div>Order beer</div>
@@ -16,7 +16,7 @@
         <li>
             <div>
                 <div>
-                    <a href="#"><img src="" alt=""/></a>
+                    <a href="#"><img src="https://i.imgur.com/uJrln1l.png" alt="Order promotional materials with Beer Gear."/></a>
                 </div>
                 <h3><a href="#">BEER GEAR</a></h3>
                 <div>Order materials</div>
@@ -25,7 +25,7 @@
         <li>
             <div>
                 <div>
-                    <a href="#"><img src="" alt=""/></a>
+                    <a href="#"><img src="https://i.imgur.com/XVmpV5D.png" alt="Forecast with Anaplan."/></a>
                 </div>
                 <h3><a href="#">ANAPLAN</a></h3>
                 <div>ABP & FORECASTING</div>
@@ -34,7 +34,7 @@
         <li>
             <div>
                 <div>
-                    <a href="#"><img src="" alt=""/></a>
+                    <a href="#"><img src="https://i.imgur.com/REqBp3Z.png" alt="Manage user access with CIM."/></a>
                 </div>
                 <h3><a href="#">CIM</a></h3>
                 <div>Manage user access</div>
@@ -43,7 +43,7 @@
         <li>
             <div>
                 <div>
-                    <a href="#"><img src="" alt=""/></a>
+                    <a href="#"><img src="https://i.imgur.com/VbgaIcJ.png" alt="Learn with Beer Sales Masters."/></a>
                 </div>
                 <h3><a href="#">BEER SALES MASTERS</a></h3>
                 <div>Learning platform</div>
@@ -52,7 +52,7 @@
         <li>
             <div>
                 <div>
-                    <a href="#"><img src="" alt=""/></a>
+                    <a href="#"><img src="https://i.imgur.com/edQWtH0.png" alt="Order Point of Sale materials."/></a>
                 </div>
                 <h3><a href="#">POINT OF SALES</a></h3>
                 <div>Order POS materials</div>
@@ -61,7 +61,7 @@
         <li>
             <div>
                 <div>
-                    <a href="#"><img src="" alt=""/></a>
+                    <a href="#"><img src="https://i.imgur.com/1mO43NH.png" alt="Get selling materials with Open Tab"/></a>
                 </div>
                 <h3><a href="#">OPEN TAB</a></h3>
                 <div>Selling materials</div>
@@ -70,7 +70,7 @@
         <li>
             <div>
                 <div>
-                    <a href="https://globalbrandcenter.cbrands.com/"><img src="" alt=""/></a>
+                    <a href="https://globalbrandcenter.cbrands.com/"><img src="https://i.imgur.com/eilrwsL.png" alt="Visit the Global Brand Center for digital assets."/></a>
                 </div>
                 <h3><a href="https://globalbrandcenter.cbrands.com/">GLOBAL BRAND CENTER</a></h3>
                 <div>Digital assets</div>
